my seconed commit

--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page1</title>
+    <title>Home</title>
 
 </head>
 <body>
+    <! هذول كلهم relative>
+    <a href="#tohere">
+        Click Here
+    </a>
+    <br>
+    <a href="about-us.html" target="_blank">
+    Go to about us
+    </a>
+    <br>
+    <a href="views/test.html" target="xyz"> <!لما بدي أرجع لفولدر خلفي>
+    Go to test page
+    </a>
+    <br>
+    <!هذول كلهم absolute>
+    <a href="https://www.Google.com">Google</a>
 <p>
     welcome walaa 
     <b> girl</b>
@@ -72,7 +87,31 @@
             </ul>
         </li>
      </ol>
-     
+     <h1>welcome </h1>
+     <h2>welcome </h2>
+     <h3>welcome </h3>
 
+     <p class="red underline" id="p1">p1</p>
+     <p class="underline blue" id="p2">p2</p>
+     <p class="blue" id="p3">p3</p>
+
+     <div>
+        <p>welcome</p>
+        <p>walaa</p>
+        <p>talahmeh</p>
+     </div>
+
+     <span>welcome walaa</span>
+
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <p id="tohere"> Welcome Here!</p>
 </body>
 </html>
